<resources>
    <string name="app_name">App Json</string>
    <string name="todo">Todo</string>
    <string name="posts">Posts</string>
    <string name="comments">Comments</string>
    <string name="albums">Albums</string>
    <string name="dAlbums">Detalhe Do Album</string>
    <string name="dTodo">Detalhe Do Todo</string>
    <string name="dPosts">Detalhe Do Post</string>
    <string name="dComment">Detalhe do Comment</string>
    <string name="id">Id:</string>
    <string name="idUser">Id User:</string>
    <string name="title">Title:</string>
    <string name="status">Status:</string>
    <string name="body">Body:</string>
    <string name="postId">Post Id:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="completed">Completado</string>
</resources>