<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailCommentActivity">

    <TextView
        android:id="@+id/tvTitleDetailComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dComment"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelPostId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelPostId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/postId"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelId"
        app:layout_constraintEnd_toStartOf="@+id/tvPostIdComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDetailComment" />

    <TextView
        android:id="@+id/tvPostIdComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelPostId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelPostId"
        app:layout_constraintTop_toTopOf="@+id/tvLabelPostId" />

    <TextView
        android:id="@+id/tvLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelName"
        app:layout_constraintEnd_toStartOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvPostIdComment" />

    <TextView
        android:id="@+id/tvIdComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelId"
        app:layout_constraintEnd_toEndOf="@id/tvPostIdComment"
        app:layout_constraintStart_toEndOf="@id/tvLabelId"
        app:layout_constraintTop_toTopOf="@+id/tvLabelId" />

    <TextView
        android:id="@+id/tvLabelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvIdComment" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelEmail"
        app:layout_constraintEnd_toEndOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelName" />

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelBody"
        app:layout_constraintEnd_toEndOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail" />

    <TextView
        android:id="@+id/tvLabelBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/body"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvBodyPost"
        app:layout_constraintEnd_toEndOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvBodyPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:lines="3"
        app:layout_constraintEnd_toEndOf="@id/tvIdComment"
        app:layout_constraintStart_toStartOf="@id/tvLabelPostId"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelBody" />

</androidx.constraintlayout.widget.ConstraintLayout>