<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailAlbumActivity">

    <TextView
        android:id="@+id/tvTitleDetailAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dAlbums"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/id"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelIdUser"
        app:layout_constraintEnd_toStartOf="@+id/tvIdAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDetailAlbum" />

    <TextView
        android:id="@+id/tvIdAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/tvLabelId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelId"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelId" />

    <TextView
        android:id="@+id/tvLabelIdUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/idUser"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelTitle"
        app:layout_constraintEnd_toStartOf="@+id/tvIdUserAlbum"
        app:layout_constraintStart_toStartOf="@+id/tvLabelId"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelId" />

    <TextView
        android:id="@+id/tvIdUserAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelIdUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelIdUser"
        app:layout_constraintTop_toTopOf="@+id/tvLabelIdUser" />

    <TextView
        android:id="@+id/tvLabelTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleAlbum"
        app:layout_constraintEnd_toEndOf="@id/tvIdAlbum"
        app:layout_constraintStart_toStartOf="@+id/tvLabelId"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelIdUser" />

    <TextView
        android:id="@+id/tvTitleAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:lines="3"
        app:layout_constraintEnd_toEndOf="@id/tvIdAlbum"
        app:layout_constraintStart_toStartOf="@id/tvLabelId"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>